refactor(database): Optimize database management and log recording functions